# advanced-data-structures

./: CMakeLists.txt  README.md  TRABALHO PRÁTICO.md
source/: compara_sort.cpp  compara_tree.cpp  compress.cpp  main.cpp  main_arquivo.cpp  main_metrics.cpp  vote_average_hash.cpp
source/data/: movies_dataset_min.csv  movies_dataset_test.csv
source/include/: BTree.h  RedBlackTree.h  fileManager.h  hash.h  heapsort.h  huffman.h  mergesort.h  metrics.h  quicksort.h  sort.h
source/lib/BTree/: BTree.tpp  test1.cpp
source/lib/FileManager/: fileManager.cpp  test1.cpp  test2.cpp  test3.cpp
source/lib/Hash/: hash.cpp  test1.cpp  test2.cpp
source/lib/Heapsort/: heapsort.tpp  test1.cpp
source/lib/Huffman/: huffman.cpp
source/lib/Mergesort/: mergesort.cpp  mergesort.tpp  test1.cpp
source/lib/Metrics/: metrics.cpp  test1.cpp  test2.cpp  test3.cpp  test4.cpp
source/lib/Quicksort/: quicksort.cpp  quicksort.tpp  test1.cpp  test2.cpp
source/lib/RedBlackTree/: RedBlackTree.tpp  test1.cpp
source/lib/Sort/: sort.cpp
source/types/: film.h
